// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unpublish-element should handle unpublishing a non-existent element 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The requested element could not be found","status":404,"operationStatus":"ContentNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`unpublish-element should unpublish a published element 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
